# data-engineering-programming-final-project

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
business/reports/: relatorio_pedidos.py
config/: settings.py
data_io/: data_io.py
pipeline/: pipeline.py
scripts/: visualizar_relatorio.py
session/: spark_session.py
tests/: test_relatorio_pedidos.py
