[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyspark-pedidos"
version = "1.0.0"
description = "Relatório de pedidos com pagamentos recusados e classificados como legítimos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Equipe Data Engineering" }
]
keywords = ["pyspark", "data-engineering", "relatorio", "pedidos"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
relatorio-pedidos = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
[tool.setuptools.packages.find]
where = ["."]
include = ["business*", "config*", "data_io*", "pipeline*", "session*"]
